modify the css location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="robots" content="noindex, nofollow, none, noarchive">
-    <link rel="stylesheet" href="/css/site.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/site.css" type="text/css" media="screen">
     <title>Data Center Doc</title>
 </head>
 <body>
